--- a/kitty.conf
+++ b/kitty.conf
@@ -24,7 +24,7 @@ map cmd+shift+equal detach_window ask
 repaint_delay 8
 
 # Remove artificial input delay
-# input_delay 0
+input_delay 0
 
 # turn off vsync
 # sync_to_monitor no
