--- a/kitty.conf
+++ b/kitty.conf
@@ -1,3 +1,13 @@
+tab_bar_min_tabs            1
+tab_bar_edge                bottom
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
+
+hide_window_decorations no
+macos_titlebar_color dark
+
+
 adjust_line_height 100%
 
 font_family             Fira Code Regular
@@ -5,6 +15,7 @@ italic_font             auto
 bold_font               auto
 bold_italic_font        auto
 
+map ctrl+tab no_op
 map cmd+t launch --cwd=current --type=tab
 map cmd+enter launch --cwd=current --type=window
 map cmd+left send_text all \x1b\x62
@@ -19,6 +30,7 @@ map cmd+shift+u move_window_to_top
 map cmd+shift+enter detach_window new-tab
 map cmd+shift+minus detach_window tab-prev
 map cmd+shift+equal detach_window ask
+map cmd+c        copy_to_clipboard
 
 # 150~ FPS for MBP display (untested)
 repaint_delay 8
@@ -33,3 +45,9 @@ font_size 14.0
 
 symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E6AA,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF,U+F0001-U+F1AF0 Symbols Nerd Font Mono
 
+
+
+# BEGIN_KITTY_THEME
+# Aquarium Dark
+include current-theme.conf
+# END_KITTY_THEME
