--- a/kitty.conf
+++ b/kitty.conf
@@ -7,10 +7,10 @@ tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows >
 hide_window_decorations no
 macos_titlebar_color dark
 
-
 adjust_line_height 100%
+adjust_column_width 0
 
-font_family             Fira Code Regular
+font_family             JetBrains Mono
 italic_font             auto
 bold_font               auto
 bold_italic_font        auto
@@ -18,18 +18,22 @@ bold_italic_font        auto
 map ctrl+tab no_op
 map cmd+t launch --cwd=current --type=tab
 map cmd+enter launch --cwd=current --type=window
+
+map cmd+shift+left previous_window
+map cmd+shift+right next_window
+
+map cmd+shift+f move_window_forward 
+map cmd+shift+b move_window_backward
+map cmd+shift+u move_window_to_top
+
+map cmd+shift+enter detach_window new-tab
+map cmd+shift+minus detach_window tab-prev
+map cmd+shift+equal detach_window ask
+
 map cmd+left send_text all \x1b\x62
 map cmd+right send_text all \x1b\x66
 map cmd+backspace send_text all \x17
 map cmd+shift+backspace send_text all \x15
-map cmd+shift+left previous_window
-map cmd+shift+right next_window
-map cmd+shift+f move_window_forward 
-map cmd+shift+b move_window_backward
-map cmd+shift+u move_window_to_top
-map cmd+shift+enter detach_window new-tab
-map cmd+shift+minus detach_window tab-prev
-map cmd+shift+equal detach_window ask
 map cmd+c        copy_to_clipboard
 
 # 150~ FPS for MBP display (untested)
